# ps2-SDL

./: Makefile.in  configure  configure.ac
docs/: Makefile.in
docs/html/: Makefile.in
docs/man3/: Makefile.in
include/: Makefile.in
src/: Makefile.in
src/audio/: Makefile.am  Makefile.in
src/audio/alsa/: Makefile.in
src/audio/arts/: Makefile.in
src/audio/baudio/: Makefile.in
src/audio/dc/: Makefile.in
src/audio/disk/: Makefile.in
src/audio/dma/: Makefile.in
src/audio/dmedia/: Makefile.in
src/audio/dsp/: Makefile.in
src/audio/esd/: Makefile.in
src/audio/macosx/: Makefile.in
src/audio/macrom/: Makefile.in
src/audio/mint/: Makefile.in
src/audio/mme/: Makefile.in
src/audio/nas/: Makefile.in
src/audio/nto/: Makefile.in
src/audio/openbsd/: Makefile.in
src/audio/paudio/: Makefile.in
src/audio/ps2sdk/: Makefile.am  Makefile.in
src/audio/riscos/: Makefile.in
src/audio/sun/: Makefile.in
src/audio/ums/: Makefile.in
src/audio/windib/: Makefile.in
src/audio/windx5/: Makefile.in
src/cdrom/: Makefile.am  Makefile.in
src/cdrom/aix/: Makefile.in
src/cdrom/beos/: Makefile.in
src/cdrom/bsdi/: Makefile.in
src/cpuinfo/: Makefile.in
src/endian/: Makefile.in
src/events/: Makefile.in
src/file/: Makefile.in
src/hermes/: Makefile.in
src/joystick/: Makefile.am  Makefile.in
src/main/: Makefile.am  Makefile.in  arch.c
src/thread/: Makefile.am  Makefile.in
src/timer/: Makefile.am  Makefile.in
src/video/: Makefile.am  Makefile.in
src/video/ps2sdk/: Makefile.am  Makefile.in
test/: Makefile.in  configure
(+63 files in other folders)
