
## Makefile.am for SDL using the framebuffer console video driver

noinst_LTLIBRARIES = libvideo_ps2sdk.la
libvideo_ps2sdk_la_SOURCES = $(PS2SDK_SRCS)

# The SDL framebuffer console video driver sources
PS2SDK_SRCS = 			\
        SDL_ps2USBevents.c      \
        SDL_ps2USBevents.h      \
        SDL_ps2kbdevents.c      \
        SDL_ps2kbdevents.h      \
        SDL_ps2keys.h           \
        SDL_ps2mouseevents.c    \
        SDL_ps2mouseevents.h    \
        SDL_ps2video.c          \
        SDL_ps2video.h
